--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 
     <groupId>uk.co.caprica</groupId>
     <artifactId>vlcj-javafx</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <name>vlcj-javafx</name>
     <description>JavaFX support classes for vlcj.</description>
@@ -66,7 +66,7 @@
         <connection>scm:git:git@github.com:caprica/vlcj-javafx.git</connection>
         <developerConnection>scm:git:git@github.com:caprica/vlcj-javafx.git</developerConnection>
         <url>git@github.com:caprica/vlcj-javafx.git</url>
-        <tag>HEAD</tag>
+        <tag>vlcj-javafx-1.0.0</tag>
     </scm>
 
     <distributionManagement>
@@ -114,7 +114,7 @@
                                         </goals>
                                     </pluginExecutionFilter>
                                     <action>
-                                        <ignore/>
+                                        <ignore />
                                     </action>
                                 </pluginExecution>
                             </pluginExecutions>
