--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
         <dependency>
             <groupId>uk.co.caprica</groupId>
             <artifactId>vlcj-javafx</artifactId>
-            <version>1.0.0</version>
+            <version>1.0.1</version>
         </dependency>
     </dependencies>
 -->
@@ -78,7 +78,7 @@
 
     <properties>
         <openJfx.version>14</openJfx.version>
-        <vlcj.version>4.4.0</vlcj.version>
+        <vlcj.version>4.5.0-SNAPSHOT</vlcj.version>
     </properties>
 
     <dependencies>
