--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
         <dependency>
             <groupId>uk.co.caprica</groupId>
             <artifactId>vlcj-javafx</artifactId>
-            <version>1.0.2</version>
+            <version>1.0.3</version>
         </dependency>
     </dependencies>
 -->
@@ -66,7 +66,7 @@
         <connection>scm:git:git@github.com:caprica/vlcj-javafx.git</connection>
         <developerConnection>scm:git:git@github.com:caprica/vlcj-javafx.git</developerConnection>
         <url>git@github.com:caprica/vlcj-javafx.git</url>
-        <tag>HEAD</tag>
+        <tag>vlcj-javafx-1.0.3</tag>
     </scm>
 
     <distributionManagement>
@@ -77,8 +77,9 @@
     </distributionManagement>
 
     <properties>
-        <openJfx.version>14.0.1</openJfx.version>
-        <vlcj.version>4.5.0</vlcj.version>
+        <javaVersion>11</javaVersion>
+        <openJfx.version>[13,)</openJfx.version>
+        <vlcj.version>4.7.1</vlcj.version>
     </properties>
 
     <dependencies>
@@ -86,6 +87,7 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-graphics</artifactId>
             <version>${openJfx.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>uk.co.caprica</groupId>
@@ -137,8 +139,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <source>${javaVersion}</source>
+                    <target>${javaVersion}}</target>
+                    <release>${javaVersion}</release>
                     <encoding>UTF-8</encoding>
                     <compilerArgument>-Xlint:serial</compilerArgument>
                 </configuration>
@@ -172,14 +175,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.2.0</version>
+                <version>3.3.1</version>
                 <configuration>
                     <author>true</author>
                     <charset>UTF-8</charset>
                     <doctitle>${project.name} ${project.version} API Documentation</doctitle>
                     <docfilessubdirs>true</docfilessubdirs>
                     <encoding>UTF-8</encoding>
-                    <footer>(C)2020 Caprica Software Limited</footer>
+                    <bottom>(C)2021 Caprica Software Limited</bottom>
                     <show>public</show>
                     <quiet>true</quiet>
                     <failOnError>true</failOnError>
